2005-11-23  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/Makefile.in: added "artec_eplus48u" to FIRMWARE_DIRS

2005-11-22  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* po/sane-backends.sv.po: Updated Swedish translation
	* sanei/sanei_scsi.c: Added some debugging. Fixed some varnings

---- FEATURE FREEZE FOR SANE 1.0.17 ---

2005-11-20  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/genesys.c backend/genesys_devices.c
	  backend/genesys.conf: Bumped build number. Changed scanner's
	  name to Canon LiDE 35/40/50. Added Canon LiDE LiDE 60. This scanner
	  is still commented out in genesys.conf. Removed comment sign for
	  Canon LiDE 35/40/50 in genesys.conf.
	* doc/descriptions/genesys.desc: Added Canon LiDE 35, 40, 50, 60.
	* doc/sane-genesys.man: Updated concerning gl841 scanners.
	* doc/descriptions/unsupported.desc: Moved Canon LiDE 35/40/50/60
	  to genesys.desc. Added Canon Pixma MP150, Tevion MD 90070 and
	  Primax Colorado 1200p.
	* tools/hotplug/libsane.usermap: Added Plustek Opticslim 2400 ids
	  (from Jan Matousek).
	* NEWS: Updated.

2005-11-19  Pierre Willenbrock <pierre@pirsoft.dnsalias.org>

        * backend/genesys_gl841.c backend/genesys_devices.c: 
          Added support for Canon LiDE 35/40/50
        * backend/genesys.c backend/genesys_low.h 
	  backend/genesys_gl646.c: Reworked data conversion 
          process to convert CIS data, added new slope 
	  generation variant
	* backend/genesys_conv.c backend/genesys_conv_hlp.c: 
          Moved conversion filter functions out of 
          backend/genesys.c

2005-11-18  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c: Disable 2400 DPI for 
	  Epson 3490, use 1600 DPI instead

2005-11-17  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-PARPORT.changes: Update.
	* backend/plustek_pp.c backend/plustek-pp.h 
	  backend/plustek-pp_ptdrv.c backend/plustek-pp_wrapper.c:
	  Fixed sizeof(long) issue for 64bit platforms, see 
	  bugreport #302195.